# homework_DRF

./: .coverage  .env.sample  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
education/: admin.py  models.py  paginators.py  permissions.py  tasks.py  tests.py  urls.py  validators.py
education/migrations/: 0001_initial.py  0002_lesson_course.py  0003_course_owner_lesson_owner.py  0004_lesson_date_create.py  0005_remove_lesson_date_create_lesson_update.py
education/serializers/: course.py  lesson.py
education/views/: course.py  lesson.py
payments/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
payments/management/commands/: fill.py
payments/migrations/: 0001_initial.py  0002_alter_payment_user.py  0003_payment_session.py  0004_payment_is_paid.py
subscription/: admin.py  models.py  tests.py  urls.py  views.py
subscription/migrations/: 0001_initial.py
users/: admin.py  models.py  serializer.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_is_active.py  0004_alter_user_last_login.py
