[tool.poetry]
name = "homework_drf"
version = "0.1.0"
description = ""
authors = ["KirillOreshchuk <oreshchuk.kirill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.7"
djangorestframework = "^3.14.0"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"
faker = "^22.4.0"
django-filter = "^23.5"
djangorestframework-simplejwt = "^5.3.1"
coverage = "^7.4.1"
postgres = "^4.0"
drf-yasg = "^1.21.7"
stripe = "^8.1.0"
redis = "^5.0.1"
celery = "^5.3.6"
python-dotenv = "^1.0.1"
cors = "^1.0.1"
django-celery-beat = "^2.5.0"
docker = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
